--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -178,9 +178,9 @@
 
   <!-- Business 2 -->
   <div class="container section">
-    <h3>Lexify Legal Group</h3>
+    <h3>Betterhalf.ai</h3>
     <p>
-      Lexify Legal Group provides expert legal services specializing in corporate law, litigation, and advisory services. Our portfolio work included website design, brand positioning, and digital campaigns aimed at building credibility and increasing inquiries. SEO and social media strategies effectively connected Lexify with clients. The results included stronger online reputation, higher engagement, and brand authority.
+      Betterhalf.ai is India’s fastest-growing matrimony platform designed for today’s generation of working professionals. The app uses advanced AI and compatibility algorithms to help people find their perfect match — faster and smarter. With features like verified profiles, personalized recommendations, and a smooth user experience, Betterhalf.ai is redefining how modern couples connect, communicate, and commit — all in one trusted app.
     </p>
     <a href="https://mindsofbrands.com/portfolio/betterhalf.ai/" class="visit-btn" target="_blank">Learn More</a>
     <div class="gallery">
@@ -193,11 +193,11 @@
 
   <!-- Business 3 -->
   <div class="container section">
-    <h3>SweetCrave Foods</h3>
+    <h3>Scribd</h3>
     <p>
-      SweetCrave Foods is a vibrant sweet shop and quick-service outlet offering traditional sweets and modern treats. Our portfolio included brand development, social media campaigns, and promotions that boosted sales and engagement. We showcased product variety through visuals, interactive menus, and influencer collaborations. The results included stronger recognition, higher sales, and loyal customer engagement.
+      Scribd is a global digital reading platform that brings together millions of ebooks, audiobooks, magazines, and podcasts — all in one subscription. From bestselling fiction to insightful business titles, Scribd helps readers discover stories and knowledge that inspire them. It’s not just a reading app; it’s an entire library designed to keep curiosity alive anytime, anywhere.
     </p>
-    <a href="https://sweetcrave.com" class="visit-btn" target="_blank">Visit Website</a>
+    <a href="https://mindsofbrands.com/portfolio/scribd/" class="visit-btn" target="_blank">Visit Website</a>
     <div class="gallery">
       <img src="https://via.placeholder.com/400x300?text=SweetCrave+1" alt="SweetCrave Image 1">
       <img src="https://via.placeholder.com/400x300?text=SweetCrave+2" alt="SweetCrave Image 2">
