--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -169,10 +169,10 @@
     </p>
     <a href="https://mindsofbrands.com/portfolio/beatxp/" class="visit-btn" target="_blank">Learn More</a>
     <div class="gallery">
-      <img src="https://via.placeholder.com/400x300?text=TechNova+1" alt="TechNova Image 1">
+     <!--- <img src="https://via.placeholder.com/400x300?text=TechNova+1" alt="TechNova Image 1">
       <img src="https://via.placeholder.com/400x300?text=TechNova+2" alt="TechNova Image 2">
       <img src="https://via.placeholder.com/400x300?text=TechNova+3" alt="TechNova Image 3">
-      <img src="https://via.placeholder.com/400x300?text=TechNova+4" alt="TechNova Image 4">
+      <img src="https://via.placeholder.com/400x300?text=TechNova+4" alt="TechNova Image 4">--->
     </div>
   </div>
 
@@ -184,10 +184,10 @@
     </p>
     <a href="https://mindsofbrands.com/portfolio/betterhalf.ai/" class="visit-btn" target="_blank">Learn More</a>
     <div class="gallery">
-      <img src="https://via.placeholder.com/400x300?text=Lexify+1" alt="Lexify Image 1">
+     <!-- <img src="https://via.placeholder.com/400x300?text=Lexify+1" alt="Lexify Image 1">
       <img src="https://via.placeholder.com/400x300?text=Lexify+2" alt="Lexify Image 2">
       <img src="https://via.placeholder.com/400x300?text=Lexify+3" alt="Lexify Image 3">
-      <img src="https://via.placeholder.com/400x300?text=Lexify+4" alt="Lexify Image 4">
+      <img src="https://via.placeholder.com/400x300?text=Lexify+4" alt="Lexify Image 4"> -->
     </div>
   </div>
 
@@ -199,10 +199,10 @@
     </p>
     <a href="https://mindsofbrands.com/portfolio/scribd/" class="visit-btn" target="_blank">Visit Website</a>
     <div class="gallery">
-      <img src="https://via.placeholder.com/400x300?text=SweetCrave+1" alt="SweetCrave Image 1">
+     <!-- <img src="https://via.placeholder.com/400x300?text=SweetCrave+1" alt="SweetCrave Image 1">
       <img src="https://via.placeholder.com/400x300?text=SweetCrave+2" alt="SweetCrave Image 2">
       <img src="https://via.placeholder.com/400x300?text=SweetCrave+3" alt="SweetCrave Image 3">
-      <img src="https://via.placeholder.com/400x300?text=SweetCrave+4" alt="SweetCrave Image 4">
+      <img src="https://via.placeholder.com/400x300?text=SweetCrave+4" alt="SweetCrave Image 4"> -->
     </div>
   </div>
 
