--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -169,8 +169,8 @@
 
       <!-- Hero image -->
       <div style="width:260px;text-align:center">
-        <img src="assets/images/beatxp-hero.png" alt="BeatXP Smartwatch" style="width:100%;border-radius:10px;box-shadow:0 8px 24px rgba(0,0,0,0.6)">
-      </div>
+      <!--<img src="assets/images/beatxp-hero.png" alt="BeatXP Smartwatch" style="width:100%;border-radius:10px;box-shadow:0 8px 24px rgba(0,0,0,0.6)"> -->
+      </div> 
     </section>
 
     <div class="grid">
