--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -291,12 +291,12 @@
           <p style="color:#ddd;font-style:italic">"Minds Of Brands helped us scale the SKUs we were worried about — their testing approach and quick optimizations made the difference." — Marketing Head, BeatXP</p>
         </div>
 
-        <div class="card">
+        <!-- <div class="card">
           <h3 style="margin-bottom:8px">Download</h3>
           <p class="small">Want a printable summary? <a href="/assets/beatxp-case-summary.pdf" style="color:var(--accent2)">Download PDF</a></p>
         </div>
       </aside>
-    </div>
+    </div>     -->
 
     <!-- Optional: Related case studies -->
     <section style="margin-top:28px">
