--- a/portfolio/betterhalf.ai/index.html
+++ b/portfolio/betterhalf.ai/index.html
@@ -159,9 +159,9 @@
         </div>
       </div>
 
-      <div style="width:260px;text-align:center">
+     <!-- <div style="width:260px;text-align:center">
         <img src="/assets/images/betterhalf-hero.png" alt="Betterhalf.ai App" style="width:100%;border-radius:10px;box-shadow:0 8px 24px rgba(0,0,0,0.6)">
-      </div>
+      </div> -->
     </section>
 
     <div class="grid">
@@ -238,10 +238,10 @@
           <p style="color:#ddd;font-style:italic">"Minds Of Brands revamped our ASO strategy with a data-driven approach that boosted rankings and reviews in record time." — Growth Manager, Betterhalf.ai</p>
         </div>
 
-        <div class="card">
+     <!--   <div class="card">
           <h3 style="margin-bottom:8px">Download</h3>
           <p class="small">Want a printable summary? <a href="/assets/betterhalf-case-summary.pdf" style="color:var(--accent2)">Download PDF</a></p>
-        </div>
+        </div> -->
       </aside>
     </div>
 
