--- a/portfolio/scribd/index.html
+++ b/portfolio/scribd/index.html
@@ -164,9 +164,9 @@
       </div>
 
       <!-- Hero image -->
-      <div style="width:260px;text-align:center">
+   <!--   <div style="width:260px;text-align:center">
         <img src="/assets/images/scribd-hero.png" alt="Scribd Audio Ebooks" style="width:100%;border-radius:10px;box-shadow:0 8px 24px rgba(0,0,0,0.6)">
-      </div>
+      </div> -->
     </section>
 
     <div class="grid">
@@ -283,10 +283,10 @@
           <p style="color:#ddd;font-style:italic">"Minds Of Brands delivered rapid, measurable SEO wins for our audiobook catalog — the sprint approach worked brilliantly." — Content Lead, Scribd</p>
         </div>
 
-        <div class="card">
+      <!--  <div class="card">
           <h3 style="margin-bottom:8px">Download</h3>
           <p class="small">Want a printable summary? <a href="/assets/scribd-case-summary.pdf" style="color:var(--accent2)">Download PDF</a></p>
-        </div>
+        </div>  -->
       </aside>
     </div>
 
