--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -197,7 +197,7 @@
     <p>
       Scribd is a global digital reading platform that brings together millions of ebooks, audiobooks, magazines, and podcasts — all in one subscription. From bestselling fiction to insightful business titles, Scribd helps readers discover stories and knowledge that inspire them. It’s not just a reading app; it’s an entire library designed to keep curiosity alive anytime, anywhere.
     </p>
-    <a href="https://mindsofbrands.com/portfolio/scribd/" class="visit-btn" target="_blank">Visit Website</a>
+    <a href="https://mindsofbrands.com/portfolio/scribd/" class="visit-btn" target="_blank">Learn More</a>
     <div class="gallery">
      <!-- <img src="https://via.placeholder.com/400x300?text=SweetCrave+1" alt="SweetCrave Image 1">
       <img src="https://via.placeholder.com/400x300?text=SweetCrave+2" alt="SweetCrave Image 2">
