--- a/portfolio/scribd/index.html
+++ b/portfolio/scribd/index.html
@@ -291,14 +291,14 @@
     </div>
 
     <!-- Related case studies -->
-    <section style="margin-top:28px">
+   <!-- <section style="margin-top:28px">
       <h2>Related case studies</h2>
       <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
         <a href="/beatxp/" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">BeatXP — Smartwatch Growth</a>
         <a href="/betterhalf/" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">Betterhalf.ai — Play Store ASO</a>
         <a href="/brainware/" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">Brainware University — Events & Rankings</a>
       </div>
-    </section>
+    </section>    -->
 
   </main>
 
