--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -299,14 +299,14 @@
     </div>     -->
 
     <!-- Optional: Related case studies -->
-    <section style="margin-top:28px">
+  <!--  <section style="margin-top:28px">
       <h2>Related case studies</h2>
       <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
         <a href="/betterhalf-case-study.html" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">Betterhalf.ai — ASO & Play Store Growth</a>
         <a href="/scribd-case-study.html" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">Scribd — Audio Ebooks SEO</a>
         <a href="/brainware-case-study.html" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">Brainware University — Events & Rankings</a>
       </div>
-    </section>
+    </section>  -->
 
   </main>
 
