--- a/portfolio/betterhalf.ai/index.html
+++ b/portfolio/betterhalf.ai/index.html
@@ -245,14 +245,14 @@
       </aside>
     </div>
 
-    <section style="margin-top:28px">
+  <!--  <section style="margin-top:28px">
       <h2>Related case studies</h2>
       <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
         <a href="/portfolio/beatxp/" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">BeatXP — Smartwatch Growth Campaign</a>
         <a href="/portfolio/scribd/" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">Scribd — Audio Ebooks SEO</a>
         <a href="/portfolio/brainware/" style="display:block;padding:12px 16px;background:#0b0b0b;border-radius:10px;text-decoration:none;color:#fff">Brainware University — Events Promotion</a>
       </div>
-    </section>
+    </section> -->
 
   </main>
 
