--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
  <!-- HEADER -->
   <header>
     <h1><a href="/">Minds Of Brands</a></h1>
-    <nav>
+    <button class="menu-toggle">☰</button>
+    <nav class="nav-menu">
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="../services/">Services</a></li>
