--- a/index.html
+++ b/index.html
@@ -1,143 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minds Of Brands | Digital Marketing & Branding</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Minds Of Brands | Digital Marketing & Branding</title>
 
-  <link rel="icon" type="image/png" href="https://mindsofbrands.com/assets/images/MindsOfBrandsLogo.png">
+<link rel="icon" type="image/png" href="https://mindsofbrands.com/assets/images/MindsOfBrandsLogo.png">
+<link rel="canonical" href="https://mindsofbrands.com/">
+<link rel="preconnect" href="https://mindsofbrands.com">
 
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Minds Of Brands helps businesses grow with SEO, Social Media Marketing, Lead Generation, and Branding solutions.">
-  <meta name="keywords" content="Digital Marketing, SEO, Social Media Marketing, Lead Generation, Branding, Minds Of Brands">
-  <meta name="author" content="Minds Of Brands">
+<!-- SEO -->
+<meta name="description" content="Minds Of Brands is a results-driven digital marketing agency offering SEO, Social Media Marketing, Lead Generation, Branding, and CRM solutions to scale your business online.">
+<meta name="keywords" content="Digital Marketing, SEO, Social Media Marketing, Lead Generation, Branding, CRM">
+<meta name="author" content="Minds Of Brands">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Minds Of Brands | Digital Marketing & Branding">
-  <meta property="og:description" content="Boosting Brands in the digital territories with SEO, SMM, and Lead Generation.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mindsofbrands.com/">
-  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Minds+Of+Brands">
+<!-- Open Graph -->
+<meta property="og:title" content="Minds Of Brands | Digital Marketing & Branding">
+<meta property="og:description" content="Boosting Brands in the digital territories with SEO, SMM, and Lead Generation.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://mindsofbrands.com/">
+<meta property="og:image" content="https://mindsofbrands.com/assets/images/MindsOfBrandsLogo.png">
 
-  <!-- Styling -->
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      color: #fff;
-      background-color: #000; /* Black background */
-    }
+<style>
 
-    /* Header */
-    header {
-      background: #000;
-      color: #fff;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-    header h1 {
-      font-size: 24px;
-      font-weight: bold;
-      background: linear-gradient(90deg, #00f, #0ff); /* Gradient blue */
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    nav ul { list-style: none; display: flex; }
-    nav ul li { margin-left: 20px; }
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-    nav ul li a:hover { color: #0ff; }
+/* Global */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    /* Hero Section */
-    .hero {
-      background-color: #000; 
-      color: white;
-      text-align: center;
-      padding: 120px 20px;
-    }
-    .hero h2 {
-      font-size: 56px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      background: linear-gradient(90deg, #00f, #0ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .hero p {
-      font-size: 22px;
-      margin-bottom: 30px;
-      color: #39ff14; /* Neon green */
-    }
-    .btn {
-      background-color: #8000ff; /* Purple */
-      color: #fff;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 18px;
-      transition: transform 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-    }
-    .btn:hover { transform: scale(1.1); }
+html {
+  scroll-behavior: smooth;
+}
 
-    /* Sections */
-    .section {
-      padding: 60px 20px;
-      text-align: center;
-      background-color: #000;
-    }
-    .section h2 {
-      margin-bottom: 20px;
-      font-size: 36px;
-      background: linear-gradient(90deg, #00f, #0ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .section p { color: #fff; font-size: 18px; max-width: 900px; margin: 0 auto; }
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-color: #000;
+  color: #fff;
+}
 
-    /* Our Products */
-    .products {
-      background-color: #000;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    .products h2 {
-      font-size: 36px;
-      background: linear-gradient(90deg, #00f, #0ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .products p { color: #fff; font-size: 18px; max-width: 900px; margin: 0 auto 30px; }
-    .products .btn { margin-top: 15px; }
+/* Header */
+header {
+  background: #000;
+  padding: 15px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 
-    /* Footer */
-    footer {
-      background: #000;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    footer p { font-size: 14px; }
-    footer a {
-      color: #0ff;
-      text-decoration: none;
-      margin: 0 10px;
-    }
-    footer a:hover { text-decoration: underline; }
+header h1 a {
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  background: linear-gradient(90deg, #00f, #0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-    /* Hide menu button on desktop */
+nav ul {
+  list-style: none;
+  display: flex;
+}
+
+nav ul li {
+  margin-left: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+  color: #0ff;
+}
+
+/* Mobile Menu Button */
 .menu-toggle {
   display: none;
   font-size: 28px;
@@ -146,14 +91,104 @@
   color: #fff;
   cursor: pointer;
 }
- 
-    /* Responsive */
-    @media (max-width: 768px) {
 
-  /* Make header stack vertically */
+/* Hero */
+.hero {
+  text-align: center;
+  padding: 120px 20px;
+}
+
+.hero h2 {
+  font-size: 56px;
+  margin-bottom: 20px;
+  background: linear-gradient(90deg, #00f, #0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero p {
+  font-size: 22px;
+  margin-bottom: 30px;
+  color: #39ff14;
+}
+
+/* Button */
+.btn {
+  background-color: #8000ff;
+  color: #fff;
+  padding: 15px 30px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-size: 18px;
+  transition: all 0.3s ease;
+  display: inline-block;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 20px #8000ff;
+}
+
+/* Sections */
+.section,
+.products {
+  padding: 60px 20px;
+  text-align: center;
+  border-top: 1px solid #111;
+}
+
+.section h2,
+.products h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+  background: linear-gradient(90deg, #00f, #0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.section p,
+.products p {
+  max-width: 900px;
+  margin: 0 auto 20px;
+  font-size: 18px;
+}
+
+/* Footer */
+footer {
+  background: #000;
+  text-align: center;
+  padding: 20px;
+  border-top: 1px solid #111;
+}
+
+footer p {
+  font-size: 14px;
+}
+
+footer a {
+  color: #0ff;
+  text-decoration: none;
+  margin: 0 8px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+
   header {
-    flex-direction: column;
-    text-align: center;
+    flex-direction: row;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+
+  nav {
+    display: none;
+    width: 100%;
   }
 
   nav ul {
@@ -165,7 +200,6 @@
     margin: 10px 0;
   }
 
-  /* Adjust hero text */
   .hero h2 {
     font-size: 32px;
   }
@@ -174,85 +208,91 @@
     font-size: 16px;
   }
 
-  /* Section titles */
   .section h2,
   .products h2 {
     font-size: 26px;
   }
 
-  /* Paragraph text */
   .section p,
   .products p {
     font-size: 15px;
   }
 
-  /* Button resize */
   .btn {
     padding: 12px 20px;
     font-size: 16px;
   }
 }
-  </style>
+
+</style>
 </head>
+
 <body>
 
- <!-- HEADER -->
-  <header>
-    <h1><a href="/">Minds Of Brands</a></h1>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="../services/">Services</a></li>
-        <li><a href="../product/">Product</a></li>
-        <li><a href="../about/">About Us</a></li>
-        <li><a href="../portfolio/">Portfolio</a></li>
-        <li><a href="../blog/">Blogs</a></li>
-        <li><a href="../contactus/">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <h1><a href="/">Minds Of Brands</a></h1>
 
+  <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h2>Boosting Brands in the Digital Territories</h2>
-    <p>SEO | Social Media | Lead Generation | Branding | CRM</p>
-    <a href="../contactus/" class="btn">Contact Us</a>
-  </section>
+  <nav id="navMenu">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="../services/">Services</a></li>
+      <li><a href="../product/">Product</a></li>
+      <li><a href="../about/">About Us</a></li>
+      <li><a href="../portfolio/">Portfolio</a></li>
+      <li><a href="../blog/">Blogs</a></li>
+      <li><a href="../contactus/">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <!-- ABOUT SECTION -->
-  <section class="section">
-    <h2>Why Choose Us?</h2>
-    <p>We help businesses scale with data-driven strategies, affordable marketing solutions, and world-class digital campaigns.</p>
-  </section>
+<section class="hero">
+  <h2>Boosting Brands in the Digital Territories</h2>
+  <p>SEO | Social Media | Lead Generation | Branding | CRM</p>
+  <a href="../contactus/" class="btn">Contact Us</a>
+</section>
 
-  <!-- SERVICES SECTION -->
-  <section class="section">
-    <h2>Our Services</h2>
-    <p>SEO | Social Media Marketing | Lead Generation | Email Marketing | Branding | CRM</p>
-    <p>Check out our Product Maina Application for more details.</p>
-  </section>
+<section class="section">
+  <h2>Why Choose Us?</h2>
+  <p>We help businesses scale with data-driven strategies, affordable marketing solutions, and world-class digital campaigns.</p>
+</section>
 
-  <!-- OUR PRODUCTS SECTION -->
-  <section class="products">
-    <h2>Our Products</h2>
-    <p>Maina is our upcoming application designed to help businesses manage digital marketing workflows efficiently. You can learn more or download the app in future updates. For now, you can contact us to get early access and explore our range of digital marketing products and solutions designed to boost your online growth.</p>
-    <a href="../product/" class="btn">Explore Products</a>
-  </section>
+<section class="section">
+  <h2>Our Services</h2>
+  <p>SEO | Social Media Marketing | Lead Generation | Email Marketing | Branding | CRM</p>
+  <p>Check out our Product Maina Application for more details.</p>
+</section>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
-    <p>
-      <a href="/">Home</a> |
-      <a href="../services/">Services</a> |
-      <a href="../product/">Product</a> |
-      <a href="../about/">About Us</a> |
-      <a href="../portfolio/">Portfolio</a> |
-      <a href="../blog/">Blogs</a> |
-      <a href="../contactus/">Contact</a>
-    </p>
-  </footer>
+<section class="products">
+  <h2>Our Products</h2>
+  <p>Maina is our upcoming application designed to help businesses manage digital marketing workflows efficiently. Contact us for early access and explore our digital marketing solutions designed to boost your online growth.</p>
+  <a href="../product/" class="btn">Explore Products</a>
+</section>
+
+<footer>
+  <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
+  <p>
+    <a href="/">Home</a> |
+    <a href="../services/">Services</a> |
+    <a href="../product/">Product</a> |
+    <a href="../about/">About Us</a> |
+    <a href="../portfolio/">Portfolio</a> |
+    <a href="../blog/">Blogs</a> |
+    <a href="../contactus/">Contact</a>
+  </p>
+</footer>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById("navMenu");
+  if (menu.style.display === "block") {
+    menu.style.display = "none";
+  } else {
+    menu.style.display = "block";
+  }
+}
+</script>
 
 </body>
 </html>
