--- a/index.html
+++ b/index.html
@@ -297,6 +297,19 @@ function toggleMenu() {
     menu.style.display = "block";
   }
 }
+
+/* Close menu when page loads (fix back button issue) */
+window.addEventListener("pageshow", function () {
+  const menu = document.getElementById("navMenu");
+  menu.style.display = "none";
+});
+
+/* Close menu when any nav link is clicked */
+document.querySelectorAll("#navMenu a").forEach(link => {
+  link.addEventListener("click", function () {
+    document.getElementById("navMenu").style.display = "none";
+  });
+});
 </script>
 
 </body>
