--- a/product/index.html
+++ b/product/index.html
@@ -26,12 +26,24 @@
       top: 0;
       z-index: 1000;
     }
-    header h1 {
-      font-size: 24px;
-      background: linear-gradient(90deg, #00f, #0ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+
+.menu-toggle {
+  display: none;
+  font-size: 28px;
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
+    
+    header h1 a {
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  background: linear-gradient(90deg, #00f, #0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
     nav ul { list-style: none; display: flex; }
     nav ul li { margin-left: 20px; }
     nav ul li a {
@@ -108,10 +120,38 @@
 
     /* Responsive */
     @media (max-width: 768px) {
-      h2 { font-size: 30px; }
-      .product-section p { font-size: 15px; }
-      .btn { font-size: 16px; padding: 12px 25px; }
-    }
+
+  header {
+    flex-direction: row;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+
+  nav {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background: #000;
+    display: none;
+    padding: 20px 0;
+  }
+
+  nav ul {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  nav ul li {
+    margin: 15px 0;
+  }
+
+  h2 { font-size: 30px; }
+  .product-section p { font-size: 15px; }
+  .btn { font-size: 16px; padding: 12px 25px; }
+}
   </style>
 </head>
 <body>
@@ -119,15 +159,18 @@
 <!-- HEADER -->
 <header>
   <h1><a href="/">Minds Of Brands</a></h1>
-  <nav>
+
+  <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+  <nav id="navMenu">
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="../services/">Services</a></li>
-      <li><a href="../product/">Product</a></li>
-      <li><a href="../about/">About Us</a></li>
-      <li><a href="../portfolio/">Portfolio</a></li>
-      <li><a href="../blog/">Blogs</a></li>
-      <li><a href="../contactus/">Contact</a></li>
+      <li><a href="/services/">Services</a></li>
+      <li><a href="/product/">Product</a></li>
+      <li><a href="/about/">About Us</a></li>
+      <li><a href="/portfolio/">Portfolio</a></li>
+      <li><a href="/blog/">Blogs</a></li>
+      <li><a href="/contactus/">Contact</a></li>
     </ul>
   </nav>
 </header>
@@ -212,5 +255,29 @@
   </p>
 </footer>
 
+<script>
+function toggleMenu() {
+  const menu = document.getElementById("navMenu");
+  if (menu.style.display === "block") {
+    menu.style.display = "none";
+  } else {
+    menu.style.display = "block";
+  }
+}
+
+/* Close menu when page loads (fix back button issue) */
+window.addEventListener("pageshow", function () {
+  const menu = document.getElementById("navMenu");
+  if(menu) menu.style.display = "none";
+});
+
+/* Close menu when any nav link is clicked */
+document.querySelectorAll("#navMenu a").forEach(link => {
+  link.addEventListener("click", function () {
+    document.getElementById("navMenu").style.display = "none";
+  });
+});
+</script>
+  
 </body>
 </html>
