--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -7,227 +7,259 @@
 
 <meta name="description" content="BeatXP Smartwatch case study — Growth strategy, ads, ASO, influencer marketing, and results from a 5-month campaign by Minds Of Brands." />
 <meta property="og:title" content="BeatXP Smartwatch — Case Study | Minds Of Brands" />
-<meta property="og:description" content="How Minds Of Brands increased BeatXP smartwatch sales by 47% in 5 months." />
+<meta property="og:description" content="How Minds Of Brands increased BeatXP smartwatch sales by 47% in 5 months using targeted performance marketing, influencer campaigns, and CRO." />
 <meta property="og:url" content="https://mindsofbrands.com/beatxp-case-study.html" />
 <meta property="og:image" content="https://mindsofbrands.com/assets/images/beatxp-og.png" />
+
 <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
 <style>
 :root{
---bg:#000;
---muted:#bdbdbd;
---accent1:#00f;
---accent2:#0ff;
---card-bg:#0a0a0a;
---accent-cta:#8000ff;
+ --bg:#000;
+ --muted:#bdbdbd;
+ --accent1:#00f;
+ --accent2:#0ff;
+ --card-bg:#0a0a0a;
+ --accent-cta:#8000ff;
 }
 
 *{box-sizing:border-box;margin:0;padding:0}
 
 body{
-font-family:Arial, Helvetica, sans-serif;
-background:var(--bg);
-color:#fff;
-line-height:1.6;
+ font-family: Arial, Helvetica, sans-serif;
+ background:var(--bg);
+ color:#fff;
+ line-height:1.6;
 }
 
-/* ================= HEADER ================= */
-
+/* HEADER */
 header{
-position:sticky;
-top:0;
-z-index:1000;
-background:linear-gradient(90deg, rgba(0,0,0,0.95), rgba(0,0,0,0.9));
-backdrop-filter:blur(6px);
-border-bottom:1px solid rgba(255,255,255,0.05);
-}
-
-.header-inner{
-max-width:1200px;
-margin:auto;
-padding:14px 32px;
-display:flex;
-align-items:center;
-justify-content:space-between;
+ position:sticky;
+ top:0;
+ z-index:100;
+ background:linear-gradient(90deg, rgba(0,0,0,0.9), rgba(0,0,0,0.85));
+ backdrop-filter: blur(6px);
+ padding:14px 32px;
+ display:flex;
+ align-items:center;
+ justify-content:space-between;
+ border-bottom:1px solid rgba(255,255,255,0.03);
 }
 
 .brand{
-font-size:24px;
-font-weight:700;
-text-decoration:none;
-background:linear-gradient(90deg,var(--accent1),var(--accent2));
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
+ font-size:24px;
+ font-weight:700;
+ text-decoration:none;
+ background:linear-gradient(90deg,var(--accent1),var(--accent2));
+ -webkit-background-clip:text;
+ -webkit-text-fill-color:transparent;
 }
 
-/* Desktop Nav */
 nav ul{
-display:flex;
-list-style:none;
-gap:20px;
-align-items:center;
+ display:flex;
+ list-style:none;
+ gap:18px;
+ align-items:center;
 }
 
 nav a{
-color:#fff;
-text-decoration:none;
-font-weight:600;
+ color:#fff;
+ text-decoration:none;
+ font-weight:600;
 }
 
 nav a:hover{
-color:var(--accent2);
+ color:var(--accent2);
 }
 
-/* Hamburger */
+/* MOBILE MENU */
 .menu-toggle{
-display:none;
-font-size:26px;
-background:none;
-border:none;
-color:#fff;
-cursor:pointer;
+ display:none;
+ font-size:26px;
+ background:none;
+ border:none;
+ color:#fff;
+ cursor:pointer;
 }
 
-/* Mobile */
-@media (max-width:768px){
+@media(max-width:768px){
 
-.menu-toggle{
-display:block;
+ nav{
+  position:absolute;
+  top:60px;
+  right:0;
+  width:100%;
+  background:#000;
+  display:none;
+  text-align:center;
+  padding:20px 0;
+ }
+
+ nav.active{
+  display:block;
+ }
+
+ nav ul{
+  flex-direction:column;
+  gap:15px;
+ }
+
+ .menu-toggle{
+  display:block;
+ }
 }
 
-nav{
-position:absolute;
-top:64px;
-left:0;
-width:100%;
-background:#000;
-display:none;
-padding:20px 0;
-}
-
-nav.active{
-display:block;
-}
-
-nav ul{
-flex-direction:column;
-gap:18px;
-text-align:center;
-}
-}
-
-/* ================= PAGE ================= */
-
+/* EXISTING STYLES BELOW (UNCHANGED) */
 .container{max-width:1100px;margin:40px auto;padding:0 20px}
 
 .hero{
-padding:44px 24px;
-border-radius:12px;
-background:linear-gradient(180deg, rgba(10,10,10,0.6), rgba(10,10,10,0.4));
-display:flex;
-gap:28px;
-align-items:center;
+ padding:44px 24px;
+ border-radius:12px;
+ background:linear-gradient(180deg, rgba(10,10,10,0.6), rgba(10,10,10,0.4));
+ display:flex;
+ gap:28px;
+ align-items:center;
 }
 
 .hero-left{flex:1}
 
 .hero h1{
-font-size:36px;
-margin-bottom:8px;
-background:linear-gradient(90deg,var(--accent1),var(--accent2));
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
+ font-size:36px;
+ margin-bottom:8px;
+ background:linear-gradient(90deg,var(--accent1),var(--accent2));
+ -webkit-background-clip:text;
+ -webkit-text-fill-color:transparent;
 }
 
-.hero p{color:var(--muted);margin-bottom:12px}
+.hero p.lead{
+ color:var(--muted);
+ margin-bottom:12px;
+}
 
-.meta{display:flex;gap:12px;color:var(--muted);font-size:14px;margin-bottom:10px}
+.meta{
+ display:flex;
+ gap:12px;
+ color:var(--muted);
+ font-size:14px;
+ margin-bottom:10px;
+}
 
 .btn{
-background:var(--accent-cta);
-color:#fff;
-padding:12px 20px;
-border-radius:10px;
-text-decoration:none;
-font-weight:700;
-display:inline-block;
+ background:var(--accent-cta);
+ color:#fff;
+ padding:12px 20px;
+ border-radius:10px;
+ text-decoration:none;
+ font-weight:700;
+ display:inline-block;
 }
 
 .btn.secondary{
-background:transparent;
-border:1px solid rgba(255,255,255,0.06);
+ background:transparent;
+ border:1px solid rgba(255,255,255,0.06);
 }
 
 .grid{
-display:grid;
-grid-template-columns:1fr 360px;
-gap:28px;
-margin-top:28px;
+ display:grid;
+ grid-template-columns:1fr 360px;
+ gap:28px;
+ margin-top:28px;
 }
 
-@media (max-width:980px){
-.grid{grid-template-columns:1fr}
-.hero{flex-direction:column}
-.hero h1{font-size:28px}
+@media(max-width:980px){
+ .grid{grid-template-columns:1fr}
+ .hero{flex-direction:column}
+ .hero h1{font-size:28px}
 }
+
+article{padding:18px}
+
+h2{
+ font-size:22px;
+ margin-bottom:12px;
+ background:linear-gradient(90deg,var(--accent1),var(--accent2));
+ -webkit-background-clip:text;
+ -webkit-text-fill-color:transparent;
+}
+
+p{color:#e8e8e8;margin-bottom:14px}
 
 .section-block{
-background:var(--card-bg);
-padding:18px;
-border-radius:10px;
-margin-bottom:18px;
-border:1px solid rgba(255,255,255,0.03);
+ background:var(--card-bg);
+ padding:18px;
+ border-radius:10px;
+ margin-bottom:18px;
+ border:1px solid rgba(255,255,255,0.02);
 }
 
-.metrics{
-display:flex;
-gap:12px;
-flex-wrap:wrap;
-}
+.metrics{display:flex;gap:12px;flex-wrap:wrap}
 
 .metric{
-flex:1 1 160px;
-background:linear-gradient(180deg,#0f0f0f,#070707);
-padding:16px;
-border-radius:10px;
+ flex:1 1 160px;
+ background:linear-gradient(180deg,#0f0f0f,#070707);
+ padding:16px;
+ border-radius:10px;
+ border:1px solid rgba(255,255,255,0.03);
 }
 
-.metric .num{
-font-size:20px;
-font-weight:800;
-margin-bottom:6px;
-}
+.metric .num{font-size:20px;font-weight:800;margin-bottom:6px}
+.metric .label{font-size:13px;color:var(--muted)}
 
-.timeline{
-list-style:none;
-padding-left:16px;
-border-left:2px dashed rgba(255,255,255,0.1);
-}
+.timeline{list-style:none;padding-left:16px;border-left:2px dashed rgba(255,255,255,0.03);margin-left:8px}
 
-.timeline li{
-padding:12px 12px 12px 22px;
-margin-bottom:6px;
+.timeline li{position:relative;padding:12px 12px 12px 22px;margin-bottom:6px}
+
+.timeline li:before{
+ content:'';
+ position:absolute;
+ left:-11px;
+ top:18px;
+ width:12px;
+ height:12px;
+ border-radius:50%;
+ background:linear-gradient(90deg,var(--accent1),var(--accent2));
 }
 
 .sidebar .card{
-background:#0b0b0b;
-padding:16px;
-border-radius:10px;
-margin-bottom:18px;
+ background:linear-gradient(180deg,#070707,#0b0b0b);
+ padding:16px;
+ border-radius:10px;
+ border:1px solid rgba(255,255,255,0.03);
+ margin-bottom:18px;
+}
+
+.tag{
+ display:inline-block;
+ padding:6px 10px;
+ border-radius:999px;
+ background:rgba(255,255,255,0.03);
+ font-size:13px;
+ margin-right:8px;
+ color:var(--muted);
+}
+
+.project-cta{
+ display:flex;
+ gap:12px;
+ align-items:center;
+ justify-content:space-between;
+ padding:18px;
+ border-radius:10px;
+ background:linear-gradient(180deg,#050505,#0b0b0b);
+ margin-top:20px;
 }
 
 footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:20px;
-margin-top:40px;
+ background:#000;
+ text-align:center;
+ padding:20px;
+ margin-top:40px;
 }
 
 footer a{
-color:#0ff;
-text-decoration:none;
-margin:0 10px;
+ color:#0ff;
+ text-decoration:none;
+ margin:0 10px;
 }
 </style>
 </head>
@@ -235,8 +267,9 @@ margin:0 10px;
 <body>
 
 <header>
-<div class="header-inner">
 <a href="/" class="brand">Minds Of Brands</a>
+
+<button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
 <nav id="navMenu">
 <ul>
@@ -249,77 +282,4 @@ margin:0 10px;
 <li><a href="/contactus/">Contact</a></li>
 </ul>
 </nav>
-
-<button class="menu-toggle" id="menuToggle">☰</button>
-</div>
 </header>
-
-<main class="container">
-
-<section class="hero">
-<div class="hero-left">
-<h1>BeatXP Smartwatch — 5-Month Growth Campaign</h1>
-<div class="meta">
-<div>Client: BeatXP</div>
-<div>•</div>
-<div>Duration: 5 months</div>
-</div>
-<p>A focused performance marketing program combining paid ads, CRO and influencer content to scale smartwatch sales.</p>
-<a class="btn" href="/contactus/">Work with us</a>
-</div>
-</section>
-
-<div class="grid">
-
-<article>
-
-<div class="section-block">
-<h2>Results</h2>
-<div class="metrics">
-<div class="metric"><div class="num">+47%</div>Sales Growth</div>
-<div class="metric"><div class="num">+32%</div>ROAS</div>
-<div class="metric"><div class="num">-25%</div>Cart Abandonment</div>
-</div>
-</div>
-
-</article>
-
-<aside class="sidebar">
-<div class="card">
-<h3>Project Snapshot</h3>
-<p>Performance Marketing • CRO • Influencer</p>
-</div>
-</aside>
-
-</div>
-
-</main>
-
-<footer>
-<p>© 2025 Minds Of Brands. All rights reserved.</p>
-<p>
-<a href="/">Home</a> |
-<a href="/services/">Services</a> |
-<a href="/portfolio/">Portfolio</a> |
-<a href="/blog/">Blogs</a> |
-<a href="/contactus/">Contact</a>
-</p>
-</footer>
-
-<script>
-const menuToggle=document.getElementById("menuToggle");
-const navMenu=document.getElementById("navMenu");
-
-menuToggle.addEventListener("click",()=>{
-navMenu.classList.toggle("active");
-});
-
-document.querySelectorAll("#navMenu a").forEach(link=>{
-link.addEventListener("click",()=>{
-navMenu.classList.remove("active");
-});
-});
-</script>
-
-</body>
-</html>
