--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -183,15 +183,14 @@ footer a{
 }
 
 /* ========== MOBILE ========== */
-/* @media(max-width:768px){
+ @media(max-width:768px){
 
   .menu-toggle{
     display:block;
-  }
+ /*  }
 
-*/
-  
-@media (max-width: 768px) {
+   @media (max-width: 768px) { */
+   
   .hero .btn {
     display: block;
     width: 100%;
