--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -189,16 +189,16 @@ footer a{
     display:block;
    }
 
-   @media (max-width: 768px) {
+ /*   @media (max-width: 768px) {   */
    
   .hero .btn {
     display: block;
     width: 100%;
   }  
 
-  .hero .btn + .btn {
-    margin-top: 12px; /* gap between buttons */
-  }
+/*  .hero .btn + .btn {
+    margin-top: 12px; */    /* gap between buttons */
+  } 
 }
 
 
