--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -196,8 +196,8 @@ footer a{
     width: 100%;
   }  
 
-/*  .hero .btn + .btn {
-    margin-top: 12px; */    /* gap between buttons */
+ .hero .btn + .btn {
+    margin-top: 12px;     /* gap between buttons */
   } 
 }
 
